<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <Button
        android:id="@+id/buttonConvertToBinary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:text="@string/corvert_to_binary"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/buttonConvertToText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:textColor="@color/black"
        android:id="@+id/buttonConvertToText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:text="@string/convert_to_text"
        app:layout_constraintBottom_toTopOf="@+id/buttonClear"
        app:layout_constraintEnd_toEndOf="@+id/buttonConvertToBinary"
        app:layout_constraintStart_toStartOf="@+id/buttonConvertToBinary" />

    <Button
        android:textColor="@color/black"
        android:id="@+id/buttonClear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_marginBottom="52dp"
        android:layout_weight="0.25"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonConvertToBinary"
        app:layout_constraintStart_toStartOf="@+id/buttonConvertToBinary" />

    <EditText
        android:id="@+id/editTextResult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:gravity="center|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/buttonConvertToBinary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/hint_enter_value"
        android:autofillHints="false" />

</androidx.constraintlayout.widget.ConstraintLayout>