<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/LinearLayout_padding">

            <!--Category label-->
            <TextView
                android:id="@+id/textView_unitConversionCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/textView_unitConversionCategory_layout_marginBottom"
                android:text="@string/label_unit_category"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="@dimen/textView_unitConversionCategory_textSize"
                android:textStyle="italic|bold"
                tools:text="Category: Lorem Ipsum" />

            <!--Convert FROM label-->
            <TextView
                android:id="@+id/textView_convertFromUnitLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_convert_from"
                android:textAlignment="center"
                android:textSize="@dimen/textView_convertFromUnitLabel_textSize"
                android:textStyle="bold" />

            <!--Convert FROM values-->
            <Spinner
                android:id="@+id/spinner_convertFromUnit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/spinner_items_empty"
                android:minHeight="@dimen/Spinner_minHeight"
                tools:entries="@array/spinner_items_empty"
                tools:textAlignment="center" />

            <!--Convert TO label-->
            <TextView
                android:id="@+id/textView_convertToUnitLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/textView_convertToUnitLabel_layout_marginTop"
                android:text="@string/label_convert_to"
                android:textAlignment="center"
                android:textSize="@dimen/textView_convertToUnitLabel_textSize"
                android:textStyle="bold" />

            <!--Convert TO values-->
            <Spinner
                android:id="@+id/spinner_convertToUnit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/Spinner_minHeight"
                tools:textAlignment="center" />

            <!--Convert unit input value-->
            <EditText
                android:id="@+id/editText_conversionInputValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:ems="2"
                tools:text="9999"
                android:textSize="@dimen/editText_conversionInputValue"
                android:hint="@string/hint_enter_unit_value"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:minHeight="@dimen/EditText_minHeight"
                android:textAlignment="center"
                android:textStyle="italic" />

            <!--Convert unit button-->
            <Button
                android:id="@+id/button_convert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/button_convert_layout_marginTop"
                android:minHeight="@dimen/Button_minHeight"
                android:text="@string/button_convert" />

            <!--Conversion result label-->
            <TextView
                android:id="@+id/textView_conversionResultLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/textView_conversionResultLabel_layout_marginTop"
                android:layout_marginBottom="@dimen/textView_conversionResultLabel_layout_marginBottom"
                android:text="@string/text_result"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="@dimen/textView_conversionResultLabel_textSize"
                android:textStyle="italic|bold" />

            <!--Conversion result-->
            <TextView
                android:id="@+id/textView_conversionResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/textView_conversionResult_textSize"
                android:textStyle="italic|bold"
                tools:text="99.99" />

            <!--Ad view container-->
            <FrameLayout
                android:id="@+id/ad_view_container"
                android:layout_width="match_parent"
                android:layout_height="148dp"
                android:layout_centerInParent="true"
                android:layout_alignParentBottom="true" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>