<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--Length/Distance category-->
    <item
        android:id="@+id/menu_item_length_distance"
        android:title="@string/category_length_distance">
    </item>

    <!--Area category-->
    <item
        android:id="@+id/menu_item_area"
        android:title="@string/category_area">
    </item>

    <!--Volume category-->
    <item
        android:id="@+id/menu_item_volume"
        android:title="@string/category_volume">
    </item>

    <!--Mass/Weight category-->
    <item
        android:id="@+id/menu_item_mass_weight"
        android:title="@string/category_mass_weight">
    </item>

    <!--Temperature category-->
    <item
        android:id="@+id/menu_item_temperature"
        android:title="@string/category_temperature">
    </item>

    <!--Pressure category-->
    <item
        android:id="@+id/menu_item_pressure"
        android:title="@string/category_pressure">
    </item>

    <!--Energy category-->
    <item
        android:id="@+id/menu_item_energy"
        android:title="@string/category_energy">
    </item>

    <!--Power category-->
    <item
        android:id="@+id/menu_item_power"
        android:title="@string/category_power">
    </item>

    <!--Angles category-->
    <item
        android:id="@+id/menu_item_angles"
        android:title="@string/category_angles">
    </item>

    <!--Force category-->
    <item
        android:id="@+id/menu_item_force"
        android:title="@string/category_force">
    </item>

</menu>
