<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="00:00" />

    <TextView
        android:id="@+id/textViewAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_00_00"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewTimer"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="@+id/textViewTimer"
        app:layout_constraintTop_toBottomOf="@+id/textViewTimer"
        tools:text="00:00" />

    <TextView
        android:id="@+id/textViewTimerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/time_now"
        app:layout_constraintBottom_toBottomOf="@+id/textViewTimer"
        app:layout_constraintEnd_toStartOf="@+id/textViewTimer"
        app:layout_constraintTop_toTopOf="@+id/textViewTimer" />

    <TextView
        android:id="@+id/textViewAlarmLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm"
        app:layout_constraintBottom_toBottomOf="@+id/textViewAlarm"
        app:layout_constraintEnd_toEndOf="@+id/textViewTimerLabel"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textViewTimerLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewAlarm" />

    <Button
        android:id="@+id/buttonSetAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="OnClickSetAlarm"
        android:text="@string/set_alarm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAlarm"
        tools:ignore="UsingOnClickInXml" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="0.75"
        android:scaleY="0.75"
        android:timePickerMode="clock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSetAlarm" />

</androidx.constraintlayout.widget.ConstraintLayout>