<resources>
    <string name="app_name">Alarm Clock</string>
    <string name="time_now">Time Now:</string>
    <string name="alarm">Alarm:</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="text_00_00">00:00</string>
    <string name="toast_error_setting_hours">Error in setting alarm hours</string>
    <string name="toast_error_setting_minutes">Error in setting alarm minutes</string>
</resources>